# lsm303dlhc-registers

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: accel.rs  accelerometer_impl.rs  lib.rs  mag.rs  registers.rs  wrapper.rs
src/accel/: conversions.rs  types.rs
src/mag/: conversions.rs  types.rs
src/registers/: accel.rs  mag.rs  register.rs
src/wrapper/: refcell.rs
