[package]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
description = "A typed map of the STMicroelectronics LSM303DLHC E-Compass registers"
documentation = "https://docs.rs/lsm303dlhc"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "i2c", "registers"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
name = "lsm303dlhc-registers"
repository = "https://github.com/sunsided/lsm303dlhc-registers"
version = "0.2.0"

[features]
default = ["accelerometer"]
accelerometer = ["dep:accelerometer"]
defmt = ["dep:defmt"]

[dependencies]
accelerometer = { version = "0.12.0", optional = true }
bitfield-struct = "0.8.0"
cast = { version = "0.3.0", default-features = false }
defmt = { version = "0.3.8", optional = true }
embedded-hal = "0.2.7"
generic-array = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
