[package]
name = "lsm303dlhc-registers"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
description = "A typed map of the STMicroelectronics LSM303DLHC E-Compass registers"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "i2c", "registers"]
license = "EUPL-1.2 OR MIT OR Apache-2.0"
homepage = "https://github.com/sunsided/lsm303dlhc-registers"
repository = "https://github.com/sunsided/lsm303dlhc-registers"
readme = "README.md"
edition = "2021"
rust-version = "1.64"

[features]
defmt = ["dep:defmt"]

[dependencies]
bitfield-struct = "0.8.0"
defmt = { version = "0.3.8", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
